# Alzheimer_disease_detection

./: .gitignore  README.md  config.py  pyproject.toml
docs/: development_process.md  project_structer.md
src/utils/: __init__.py  logger.py
