[tool.poetry]
name = "alzheimer disease classification"
version = "0.1.0"
description = "A deep learning model to classify Alzheimer's disease"
authors = ["Hassane SKIKRI <hassaneskikri@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
tensorflow = "^2.12.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
pillow = "^10.0.0"
scikit-learn = "^1.2.0"
pyyaml = "^6.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"  # Automated testing framework to verify your code works correctly
black = "^23.3.0"  # Automatic code formatter that enforces consistent style
isort = "^5.12.0"  # Automatically organizes and sorts your import statements
flake8 = "^6.0.0"  # Linting tool that checks for common errors and style issues
mypy = "^1.3.0"    # Static type checker that verifies type hints
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"